# Object-Oriented-Programming

Quizz/: CMakeLists.txt  FileRepo.h  Observer.h  Participant.cpp  Participant.h  main.cpp  participants.cpp  participants.h  participants.ui  presenter.cpp  presenter.h  quizz.cpp  quizz.h  quizz.ui  service.cpp  service.h
Screen Writter/: IdeaTableModel.cpp  IdeaTableModel.h  Observer.cpp  Observer.h  idea.cpp  idea.h  ideaRepo.cpp  ideaRepo.h  main.cpp  screenWriter.cpp  screenWriter.h  service.cpp  service.h  writerwindow.cpp  writerwindow.h  writerwindow.ui
Social Media/: CMakeLists.txt  main.cpp  observer.h  posts.cpp  posts.h  repo.cpp  repo.h  service.cpp  service.h  topics.cpp  topics.h  users.cpp  users.h  window.cpp  window.h  window.ui
Task Manager/: CMakeLists.txt  main.cpp  observer.h  programmer.cpp  programmer.h  programmerwindow.cpp  programmerwindow.h  programmerwindow.ui  service.cpp  service.h  task.cpp  task.h  taskRepo.cpp  taskRepo.h
a11-Movie Database/: CMakeLists.txt  FileRepository.cpp  FileRepository.h  HTMLTable.cpp  MovieList.cpp  MovieList.h  MovieValidator.cpp  MovieValidator.h  a11.cpp  a11.h  adminservice.cpp  adminservice.h  domain.cpp  domain.h  main.cpp  moviesfile.txt  repository.cpp  repository.h  ui.cpp  ui.h  userservice.cpp  userservice.h  validators.cpp  validators.h
a3-4-Intelligent Refrigerator/: DynamicArray.c  DynamicArray.h  README.md  UndoRedo.c  UndoRedo.h  domain.c  domain.h  main.c  repo.c  repo.h  service.c  service.h  ui.c  ui.h
a5-6-Movie Database/: DynamicVector.cpp  DynamicVector.h  README.md  adminservice.cpp  adminservice.h  domain.cpp  domain.h  main.cpp  repository.cpp  repository.h  ui.cpp  ui.h  userservice.cpp  userservice.h  validators.cpp
a7-8-Movie Database/: FileRepository.cpp  FileRepository.h  MovieList.cpp  MovieValidator.cpp  README.md  adminservice.cpp  adminservice.h  domain.cpp  main.cpp  movie.txt  repository.cpp  ui.cpp  userservice.cpp  userservice.h  watch_list.html
